Add create keypair
